WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311942
[Grid] Crash under GridTrackSizingAlgorithm::copyUsedTrackSizesForSubgrid when paint containment changes on subgrid
https://bugs.webkit.org/show_bug.cgi?id=311942
Summary
[Grid] Crash under GridTrackSizingAlgorithm::copyUsedTrackSizesForSubgrid whe...
Sammy Gill
Reported
2026-04-10 09:47:59 PDT
Created
attachment 478996
[details]
Testcase The following test case triggers a RELEASE_ASSERT in GridTrackSizingAlgorithm::copyUsedTrackSizesForSubgrid.
Attachments
Testcase
(437 bytes, text/html)
2026-04-10 09:47 PDT
,
Sammy Gill
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2026-04-10 09:48:22 PDT
rdar://172724120
Sammy Gill
Comment 2
2026-04-10 10:00:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62421
Sammy Gill
Comment 3
2026-04-10 10:52:55 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/59106
EWS
Comment 4
2026-04-10 16:47:03 PDT
Committed
310968@main
(2cc90f478c7e): <
https://commits.webkit.org/310968@main
> Reviewed commits have been landed. Closing PR #62421 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug